--- a/components/page-blank.html
+++ b/components/page-blank.html
@@ -20,7 +20,7 @@
 		<link rel="icon" href="#">
 
 		<!-- Page Title -->
-		<title>Page - FAQ</title>
+		<title>Page - Recent Deals</title>
 
 		<!-- Global CSS [ Bootstrap, Font-Awesome, Animate CSS, Hover CSS, Bootstrap Select ] -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
